--- a/src/components/calendar/content/monthly/cell/style.scss
+++ b/src/components/calendar/content/monthly/cell/style.scss
@@ -17,7 +17,7 @@
             user-select: none;
         }
 
-        &:hover>.__calendar-table-td-body-date {
+        &:hover > .__calendar-table-td-body-date {
             color: #000;
         }
 
@@ -54,7 +54,7 @@
 
                 &.hover {
                     opacity: 0.95;
-                    border: 1px solid rgba($color: #000000, $alpha: 1.0)
+                    border: 1px solid rgba($color: #000000, $alpha: 1);
                 }
 
                 &.hide {
@@ -64,7 +64,6 @@
             }
         }
     }
-
 
     &.__calender-past {
         background: url("./past-day.png") repeat;
