--- a/src/components/loading/loading.scss
+++ b/src/components/loading/loading.scss
@@ -17,7 +17,7 @@
             width: 48px;
             height: 48px;
             display: inline-block;
-            background: #FFF;
+            background: #fff;
             position: relative;
             box-sizing: border-box;
             animation: flipX 1s linear infinite;
