--- a/src/components/datepicker/datepicker-dropdown/pick-day/pickDay.scss
+++ b/src/components/datepicker/datepicker-dropdown/pick-day/pickDay.scss
@@ -1,82 +1,80 @@
 .__datepicker-pick-day-container {
-    width: 270px;
-    margin: auto;
+  width: 270px;
+  margin: auto;
 
-    .__datepicker-weak {
-        display: flex;
-        margin: 0 10px;
-        align-items: center;
-        flex-direction: row-reverse;
+  .__datepicker-weak {
+    display: flex;
+    margin: 0 10px;
+    align-items: center;
+    flex-direction: row-reverse;
+    background-color: var(--primary);
+    border-radius: 5px;
+    user-select: none;
+
+    .__datepicker-weak-item {
+      width: 25px;
+      height: 25px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #fff;
+      font-size: 12px;
+      margin: 5px;
+
+      &.__datepicker-holiday {
+        color: var(--holiday);
+      }
+    }
+  }
+
+  .__datepicker-pick-day {
+    display: flex;
+    margin: 5px 10px;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+
+    .__datepicker-days {
+      width: 23px;
+      height: 23px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 12px;
+      border-radius: 5px;
+      margin: 5px;
+      cursor: pointer;
+      border: 1px solid transparent;
+      user-select: none;
+      position: relative;
+
+      .__datepicker-day-effect {
+        width: 3px;
+        height: 3px;
+        border-radius: 10px;
+        position: absolute;
+        bottom: 1px;
+        left: 50%;
+        transform: translate3d(-50%, 0, 0);
+      }
+
+      &:hover:not(.__datepicker-day-disabled):not(.__datepicker-today):not(.__datepicker-selected) {
+        background-color: var(--secondary);
+      }
+
+      &.__datepicker-day-disabled {
+        opacity: 0.4;
+      }
+
+      &.__datepicker-today {
+        color: var(--primary);
+        border: 1px solid var(--primary);
+      }
+
+      &.__datepicker-selected {
         background-color: var(--primary);
-        border-radius: 5px;
-        user-select: none;
-
-        .__datepicker-weak-item {
-            width: 25px;
-            height: 25px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #fff;
-            font-size: 12px;
-            margin: 5px;
-
-            &.__datepicker-holiday {
-                color: var(--holiday);
-            }
-        }
+        color: #fff;
+      }
     }
-
-    .__datepicker-pick-day {
-        display: flex;
-        margin: 5px 10px;
-        flex-wrap: wrap;
-        flex-direction: row;
-        justify-content: space-around;
-
-        .__datepicker-days {
-            width: 23px;
-            height: 23px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 12px;
-            border-radius: 5px;
-            margin: 5px;
-            cursor: pointer;
-            border: 1px solid transparent;
-            user-select: none;
-            position: relative;
-
-            .__datepicker-day-effect {
-                width: 3px;
-                height: 3px;
-                border-radius: 10px;
-                position: absolute;
-                bottom: 1px;
-                left: 50%;
-                transform: translate3d(-50%, 0, 0);
-            }
-
-            &:hover:not(.__datepicker-day-disabled):not(.__datepicker-today):not(
-                    .__datepicker-selected
-                ) {
-                background-color: var(--secondary);
-            }
-
-            &.__datepicker-day-disabled {
-                opacity: 0.4;
-            }
-
-            &.__datepicker-today {
-                color: var(--primary);
-                border: 1px solid var(--primary);
-            }
-
-            &.__datepicker-selected {
-                background-color: var(--primary);
-                color: #fff;
-            }
-        }
-    }
+  }
 }
